Correct gallery format spacing

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -25,7 +25,7 @@
 --------------------------------------------------------------*/
 .site-content .entry-title {
 	color: $color__text-dark;
-	font-size: 29px; 
+	font-size: 29px;
 	line-height: normal;
 	margin: 0;
 	
@@ -99,7 +99,8 @@
 }
 
 .entry-thumbnail,
-.entry-video {
+.entry-video,
+.gallery-format-slider {
 	margin-bottom: 25px; 
 }
 
